--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
+    "gray-matter": "^4.0.3",
     "next": "15.4.6",
     "next-auth": "^5.0.0-beta.29",
     "node-cron": "^4.2.1",
@@ -31,6 +32,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "swiper": "^11.2.10",
     "yup": "^1.7.0",
     "zod": "^4.1.5",
