--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "autoprefixer": "^10",
     "postcss": "^8.5.6",
     "prisma": "^6.13.0",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5"
