--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"],
-  "files": ["src/types/types.d.ts"]
+  "files": ["src/types/types.d.ts", "src/types/custom.d.ts"]
 }
