Adding GoogleAnalytics and CookieConsent component to track user interactions

--- a/.env,template
+++ b/.env,template
@@ -51,3 +51,6 @@ PAYPAL_ORDERS_URL=https://api.sandbox.paypal.com/v2/checkout/orders
 
 # https://console.cloudinary.com/
 CLOUDINARY_URL=
+
+# Google Analytics
+NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=
