--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@primer/octicons-react": "^19.15.5",
     "@prisma/client": "^6.14.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/typography": "^0.5.16",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
