--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-toastify": "^11.0.5",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "remark-slug": "^8.0.0",
     "swiper": "^11.2.10",
     "yup": "^1.7.0",
     "zod": "^4.1.5",
