--- a/package.json
+++ b/package.json
@@ -33,10 +33,15 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "remark-slug": "^8.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "swiper": "^11.2.10",
+    "unified": "^11.0.5",
     "yup": "^1.7.0",
     "zod": "^4.1.5",
     "zustand": "^5.0.7"
