--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "15.4.6",
     "next-auth": "^5.0.0-beta.29",
     "node-cron": "^4.2.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19",
     "react-dom": "^19",
     "react-hook-form": "^7.62.0",
