--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "prisma:deploy": "npx prisma migrate deploy && prisma generate",
+    "build:emails": "mjml src/emails/*.mjml -o src/lib/templates/emails",
     "seed": "ts-node -P src/seed/tsconfig.json src/seed/seed-database.ts"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "next": "15.4.6",
     "next-auth": "^5.0.0-beta.29",
     "node-cron": "^4.2.1",
+    "nodemailer": "^6.10.1",
     "qrcode.react": "^4.2.0",
     "react": "^19",
     "react-dom": "^19",
@@ -51,9 +53,11 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^24",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10",
+    "mjml": "^4.16.1",
     "postcss": "^8.5.6",
     "prisma": "^6.13.0",
     "raw-loader": "^4.0.2",
