--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.22",
     "gray-matter": "^4.0.3",
     "next": "15.4.6",
     "next-auth": "^5.0.0-beta.29",
